After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 681159 - Wallpaper (and desktop) not aligned properly when plugging in/out external monitor
Wallpaper (and desktop) not aligned properly when plugging in/out external mo...
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2012-08-03 20:37 UTC by Daan
Modified: 2012-10-07 16:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot of the problem (960.75 KB, image/png)
2012-08-03 20:37 UTC, Daan
  Details
window: Don't move the desktop window after monitor hotplug (920 bytes, patch)
2012-10-04 18:13 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
overview: Make sure that we put the desktop clone at the right place (1.13 KB, patch)
2012-10-04 18:13 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Daan 2012-08-03 20:37:31 UTC
Created attachment 220285 [details]
Screenshot of the problem

When I log in with my external display plugged in, everything works fine.

The problem occurs when I plug in or plug out my external monitor.
After the display configuration changes, gnome shell doesn't seem to know where the desktop should be alligned.

To make this clear, I have uploaded this screenshot:
http://i.imgur.com/HqKfU.jpg

Left you can see my 1600x900 laptop screen, and on the right is my external 1920x1080 screen after plugging in my external monitor.

Also, the right mouse button menu doesn't work outside the centered middle background image, and it is not possible to place any icons outside this image.

This problem only exists in Gnome shell (not in Unity and Gnome classic).

I think this problem can be solved by reseting the desktop area like it does when logging in, but I am unfortunately not experienced enough to fix this by myself.

Asus Zenbook UX31
Ubuntu 12.04
Comment 1 Danny Kirchmeier 2012-08-28 13:25:24 UTC
I have this problem too. Restarting the shell via 'Alt+F2' does not fix the issue. 

MacBook Pro 8.2
Radeon HD 6400M
Ubuntu 12.04
Comment 2 Daan 2012-10-04 17:04:43 UTC
I think, I have figuerd out the problem.

The wallpaper is lined out correctly, the problem is the Nautilus desktop.

Workaround after plugging in screen (just restarting nautilus):
$ killall nautilus
$ nautilus&

As a permanent fix, you can also disable the nautilus desktop completely.
GnomeTweakTool (Advanced settings) --> Desktop --> Have file manager to handle desktop --> OFF

Maybe a developer can implement a nautilus-restart after a change in the display configuration in Gnome 3?
Comment 3 Jasper St. Pierre (not reading bugmail) 2012-10-04 17:10:04 UTC
More appropriately, this is an issue with gnome-bg in gnome-desktop.

This should be fixed with GNOME 3.6, though.
Comment 4 Jasper St. Pierre (not reading bugmail) 2012-10-04 17:29:38 UTC
OK.

Though there are plenty of bugs in monitor hotplug, we couldn't reproduce this exact issue. What settings do you have for your wallpaper? What does:

 $ gsettings get org.gnome.desktop.background picture-options

say?
Comment 5 Danny Kirchmeier 2012-10-04 17:34:05 UTC
Killing nautilus works for me too.

My picture options are set to zoom.

  $ gsettings get org.gnome.desktop.background picture-options
  'zoom'
Comment 6 Daan 2012-10-04 17:39:00 UTC
My options are also 'zoom'.
Comment 7 Jasper St. Pierre (not reading bugmail) 2012-10-04 18:13:27 UTC
Created attachment 225834 [details] [review]
window: Don't move the desktop window after monitor hotplug

If someone plugs in a new monitor, while all their regular windows
should move in absolute X coordinates to ensure they stay on the
same monitor, the desktop window should stay put.
Comment 8 Jasper St. Pierre (not reading bugmail) 2012-10-04 18:13:38 UTC
Created attachment 225835 [details] [review]
overview: Make sure that we put the desktop clone at the right place

This ensures that the desktop window's smooth fadeout when going to
the overview is in the same spot as the desktop window, which may not
always be at 0, 0.
Comment 9 Cosimo Cecchi 2012-10-04 19:04:40 UTC
The patches appear to work fine here in testing.
Comment 10 drago01 2012-10-07 10:20:41 UTC
Review of attachment 225834 [details] [review]:

Looks good.
Comment 11 drago01 2012-10-07 10:21:02 UTC
Review of attachment 225835 [details] [review]:

Looks good.
Comment 12 Jasper St. Pierre (not reading bugmail) 2012-10-07 16:22:22 UTC
Comment on attachment 225835 [details] [review]
overview: Make sure that we put the desktop clone at the right place

Attachment 225835 [details] pushed as 4f56fb1 - overview: Make sure that we put the desktop clone at the right place
Comment 13 Jasper St. Pierre (not reading bugmail) 2012-10-07 16:25:03 UTC
Attachment 225834 [details] pushed as 7a2c019 - window: Don't move the desktop window after monitor hotplug