src/core/window.c
@@ -4454,6 +4454,9 @@ meta_window_update_for_monitors_changed (MetaWindow *window)
   const MetaMonitorInfo *old, *new;
   int i;
 
+  if (window->type == META_WINDOW_DESKTOP)
+    return;
+
   old = window->monitor;
 
   /* Start on primary */
